@@ -1,17 +1,56 @@
 import org.jetbrains.intellij.platform.gradle.TestFrameworkType
 
 plugins {
-    id("org.jetbrains.kotlin.jvm")
+    id("java")
     id("org.jetbrains.intellij.platform")
     id("org.jetbrains.changelog")
+}
+
+group = providers.gradleProperty("pluginGroup").get()
+version = providers.gradleProperty("pluginVersion").get()
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 dependencies {
     testImplementation("junit:junit:4.13.2")
 
-    // IntelliJ Platform Gradle Plugin Dependencies Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html
+    // IntelliJ Platform Gradle Plugin Dependencies Extension
+    // https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html
     intellijPlatform {
-        intellijIdea("2025.2.6.2")
+        intellijIdea(providers.gradleProperty("platformVersion").get())
+        bundledPlugin("com.intellij.java")
+        pluginVerifier()
+        zipSigner()
         testFramework(TestFrameworkType.Platform)
     }
 }
+
+intellijPlatform {
+    pluginConfiguration {
+        name = "MybatisLogFormatSQL"
+        version = providers.gradleProperty("pluginVersion").get()
+
+        ideaVersion {
+            sinceBuild = providers.gradleProperty("pluginSinceBuild").get()
+            untilBuild = providers.gradleProperty("pluginUntilBuild").get()
+        }
+    }
+
+    pluginVerification {
+        ides {
+            recommended()
+        }
+    }
+}
+
+tasks {
+    runIde {
+        // Suppress terminally deprecated sun.misc.Unsafe warnings from Netty (bundled in IntelliJ Platform)
+        // These warnings appear on JDK 23+ where sun.misc.Unsafe memory access methods are flagged
+        jvmArgs("--sun-misc-unsafe-memory-access=allow")
+    }
+}
+
